syntax = "proto3";

package helloworld;

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string response = 1;
}

service Greet {
    rpc sayHello(HelloRequest) returns (HelloResponse);
}